# Flam_assigment

./: .gitignore  README.md
android/: build.gradle  build.ps1  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  egl_wrapper.cpp  egl_wrapper.hpp  gl_bridge.cpp  gl_bridge.hpp  jni_bridge.cpp  jni_bridge.hpp  native-lib.cpp
android/app/src/main/java/com/example/edgeviewer/: GLBridge.kt  MainActivity.kt  NativeBridge.kt  NativeLoader.kt
android/app/src/main/java/com/example/edgeviewer/camera/: Camera2Controller.kt
android/app/src/main/java/com/example/edgeviewer/processing/: FrameProcessor.kt  ImageSaver.kt  YuvUtils.kt
android/app/src/main/java/com/example/edgeviewer/util/: FpsMeter.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
gl/: CMakeLists.txt
gl/src/: gl_renderer.cpp  gl_renderer.hpp
jni/: CMakeLists.txt
jni/src/: opencv_pipeline.cpp  opencv_pipeline.hpp
web/: README.md  package-lock.json  package.json  server.js  tsconfig.json
web/public/: edge.js  index.html
web/src/: index.ts
